<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category_home"
            android:icon="@drawable/ic_category_party_tasks"
            android:title="@string/category_home" />
        <item
            android:id="@+id/nav_category_party_tasks"
            android:icon="@drawable/ic_category_party_tasks"
            android:title="@string/category_party_tasks" />
        <item
            android:id="@+id/nav_category_home_tasks"
            android:icon="@drawable/ic_category_home_tasks"
            android:title="@string/category_home_tasks" />
        <item
            android:id="@+id/nav_category_tickets"
            android:icon="@drawable/ic_category_tickets"
            android:title="@string/category_tickets" />
        <item
            android:id="@+id/nav_category_stats"
            android:icon="@drawable/ic_stats"
            android:title="@string/category_stats" />
    </group>

</menu>
