<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner_background"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="40dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_task_dialog_title"
        android:textAppearance="@style/DialogFragmentTitle" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_task_dialog_text"
        android:textAppearance="@style/DialogFragmentText" />

    <Button
        android:id="@+id/dialog_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="bottom|center"
        android:backgroundTint="@color/my_light_primary"
        android:foregroundTint="@color/design_default_color_on_primary"
        android:text="@string/delete_ok_button" />

</LinearLayout>